# dart-crypto-speedtests

./: README.md  pubspec.yaml
ffi/: .gitignore  pubspec.yaml
lib/: boring.dart  dart_crypto_speedtests.dart
lib/src/: boringssl_ffi.dart  openssl_ffi.dart  openssl_pkg.dart
scripts/: CMakeLists.txt  build_boringssl.sh
